# napari-plugins

./: README.md
napari-teeth-landmarks/: README.md  pyproject.toml  setup.cfg
napari-teeth-landmarks/napari_teeth_landmarks/: __init__.py  _reader.py  napari.yaml
